fix double scroll-bar

--- a/src/components/Artists/style.module.css
+++ b/src/components/Artists/style.module.css
@@ -8,7 +8,6 @@
 }
 
 .singer {
-  margin-top: 5px;
   font-size: 0.9em;
   cursor: pointer;
 
